# Haskell_tictactoe

./: README.md
Haskell_tictactoe/: tictactoe.cabal
Haskell_tictactoe/app/: Main.hs
Haskell_tictactoe/src/: Board.hs  Cell.hs  Helpers.hs  Player.hs  TicTacToe.hs
Haskell_tictactoe/test/: Tests.hs
Haskell_tictactoe/test/IC/: Exact.hs
